--- a/part2-c/package.json
+++ b/part2-c/package.json
@@ -17,8 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -p3001 --watch db.json"
+    "server": "json-server -p3002 --watch db.json"
   },
+  "proxy": "http://localhost:3003",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -39,5 +40,8 @@
   },
   "devDependencies": {
     "json-server": "^0.16.3"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
